# gfold

./: README  README.md  config.h.in  configure.in
src/: Makefile.am  PS_dot.c  PS_dot.h  ana_sample.c  fold.c  fold.h  fold_vars.c  fold_vars.h  gfold.c  gfold.ggo  head.h  input.in  input2.in  input3.in  main.c  pair_mat.h  params.c  pfunc.c  pfunc_old.c  utils.c  utils.h
